2009-11-03  Per Bothner  <per@bothner.com>

	* COPYING: Removed obsolete file.

2009-10-19  Per Bothner  <per@bothner.com>

	* LangObjType.java (getRealType): New method.

2009-10-17  Per Bothner  <per@bothner.com>

	* LangObjType.java (getConstructor): Update to use FVector.make.

2009-09-30  Per Bothner  <per@bothner.com>

	* LispReader.java (parseNumber): Map 2f2 to java.lang.Float etc.

	* LangObjType.java (dflonumType): New static.
	(DFLONUM_TYPE_CODE): New type code constant.
	(coerceDFloNum): New method.
	(coercionOrNullMethod, coerceFromObject, emitConvertFromPrimitive,
	emitCoerceFromObject): Implement support for numericType.

2009-09-20  Per Bothner  <per@bothner.com>

	* LangObjType.java (numericType): New static.
	(NUMERIC_TYPE_CODE): New type code constant.
	(coerceToNumeric): New method.
	(coercionOrNullMethod, coerceFromObject, emitConvertFromPrimitive,
	emitCoerceFromObject): Implement support for numericType.

2009-09-19  Per Bothner  <per@bothner.com>

	* LispReader.java (parseNumber): Parse R6RS +nan.0, +inf.0, and -inf.0.

2009-09-15  Per Bothner  <per@bothner.com>

	* LangPrimType.java (byteType, shortType, intType, longType, floatType,
	doubleType): Semi-depecate - use gnu.bytecode.PrimType objects.
	(emitCoerceToObject): Remove special-handling for
	byteType/... - use default PrimType handling.
	(coerceToObject): Likewise.
	* LangObjType.java (emitConvertFromPrimitive): New method.

2009-09-11  Per Bothner  <per@bothner.com>

	* LangObjType.java (realType, rationalType): New static objects.
	(coerceRealNum, coerceRatNum): New methods.
	* LangObjType.java (getDeclaredMethod): New method.

2009-08-31  Per Bothner  <per@bothner.com>

	* LispReader.java (sharedStructureTable): New field.
	* ReaderDispatchMisc.java: Add support for #n#= and #n# as in
	CommonLisp and SRFI-38.
	* ReaderDispatch.java: Update accordingly.

2009-08-29  Per Bothner  <per@bothner.com>

	Allow ||: as a keyword, as recommended by SRFI-88.